Updated z-index where badge has a clipping issue within Magento_Luma for hover state on PLP

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -21,7 +21,7 @@ a.product-item-photo:hover {
 .badge {
     position: relative;
     bottom: 50px;
-    z-index: 10;
+    z-index: 1;
     left: -10px;
     width: 100%;
     text-align: left;
